<resources>
    <string name="app_name">Milligram</string>
    <string name="action_settings">Settings</string>
    <string name="looking_for">I\'m looking for...</string>
    <string name="close_to">Close to...</string>
    <string name="search">Search</string>
    <string name="drug_name">Drug/Medicine name</string>
    <string name="city_state_zip">City/State/Zip or Address</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="vouchers">Vouchers</string>
    <string name="refine">Refine</string>
    <string name="results">Results</string>
    <string name="back">Back</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyB-7p5F-Fz_fD8LPj0rxOh-A1hBAFdHOxU
    </string>
    <string name="google_app_id">123456789012</string>
    <string name="noSavedVouchers">you have no saved vouchers</string>
    <string name="saved_vouchers">Saved Vouchers</string>
    <string name="done">Done</string>
    <string name="title_activity_refine_search">RefineSearchActivity</string>
    <string name="strength">Strength</string>
    <string name="quantity">Quantity</string>
    <string name="form">Form</string>
    <string name="either">Either</string>
    <string name="name_brand">Name Brand</string>
    <string name="generic">Generic</string>
</resources>
