<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.milligram.milligram.ResultsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/backToolbarButton"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_keyboard_arrow_left_24dp"
                    style="@style/ResultsTheme.BackButton"
                    android:text="@string/back"
                    android:layout_gravity="center_vertical"
                    android:gravity="left|center_vertical"
                    android:onClick="backPressed"
                    android:clickable="true"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/results"
                    android:textAlignment="center"
                    android:id="@+id/searchToolbarTextView"
                    android:enabled="true"
                    android:textColor="@color/colorNav"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refine"
                    android:id="@+id/searchToolbarButton"
                    style="@style/AppTheme.NavButton"
                    android:enabled="true"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.milligram.milligram.ResultsActivity"
        tools:showIn="@layout/activity_results">

        <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/resultsViewFlipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <include android:id="@+id/listResultsView" layout="@layout/content_results" />
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!--<include android:id="@+id/mapResultsView" layout="@layout/activity_maps" />-->

        </ViewFlipper>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:background="@color/colorPrimary">

            <info.hoang8f.android.segmented.SegmentedGroup
                xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/segmentedViewSelectorGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="2dp"
                segmentedgroup:sc_corner_radius="8dp"
                segmentedgroup:sc_tint_color="@color/colorNav"
                segmentedgroup:sc_checked_text_color="@color/colorPrimary">

                <RadioButton
                    android:id="@+id/listSelectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="List"
                    android:checked="true"
                    style="@style/RadioButton"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:onClick="listSelected" />

                <RadioButton
                    android:id="@+id/mapSelectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Map"
                    style="@style/RadioButton"
                    android:paddingLeft="30dp"
                    android:paddingTop="5dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="5dp"
                    android:onClick="mapSelected" />
            </info.hoang8f.android.segmented.SegmentedGroup>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
